Fixed inconsistent fieldset spacing

--- a/app/assets/stylesheets/bootstrap-tweaks.scss
+++ b/app/assets/stylesheets/bootstrap-tweaks.scss
@@ -285,17 +285,15 @@ fieldset[disabled] .help-block { display: none; }
     margin: 0 $grid-gutter-width/-2;
     padding: 0 $grid-gutter-width/2;
 
-    &.actions {
-      padding-top: 15px;
-    }
-    &.bg-primary, &.bg-success, &.bg-info, &.bg-warning, &.bg-danger {
+    &.bg-primary, &.bg-success, &.bg-info, &.bg-warning, &.bg-danger,
+    &.actions, &.gap {
       padding-top: 15px;
     }
 
     legend.vertical {
       position: absolute;
       right: 100%;
-      margin-right: 42px;
+      margin-right: 25px;
       transform-origin: top right;
       transform: rotate(-90deg);
       text-align: right;
